WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22993
Application cache shouldn't be inherited by subframes
https://bugs.webkit.org/show_bug.cgi?id=22993
Summary
Application cache shouldn't be inherited by subframes
Alexey Proskuryakov
Reported
2008-12-25 02:30:16 PST
HTML5 no longer says that top-level frame application cache should be used for child frames. I'm not sure if I know all the reasons for this, but security is certainly one - otherwise, a different origin subframe could add dynamic entries to the main thread's cache.
Attachments
proposed fix
(11.74 KB, patch)
2008-12-25 02:48 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-12-25 02:48:16 PST
Created
attachment 26247
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2008-12-25 02:52:32 PST
s/main thread's/top frame's/ :)
Darin Adler
Comment 3
2008-12-25 10:11:32 PST
Comment on
attachment 26247
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 4
2008-12-25 13:17:17 PST
Committed <
http://trac.webkit.org/changeset/39474
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug