        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=22993
        Application cache shouldn't be inherited by subframes

        <rdar://problem/6284708> AppCache crashes in ApplicationCacheResource::addType()
        This crash happened because main resource for subframe was looked up in top frame's
        appcache. If not for the spec change, it could have been fixed by preventing the load
        altogether.

        Test: http/tests/appcache/foreign-iframe-main.html
        I intend to write additional tests for the behavior change.

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::shouldLoadResourceFromApplicationCache):
        * loader/DocumentLoader.h:
        (WebCore::DocumentLoader::applicationCache):
        * loader/MainResourceLoader.cpp:
        (WebCore::MainResourceLoader::load):
        * loader/appcache/DOMApplicationCache.cpp:
        (WebCore::DOMApplicationCache::associatedCache):
        Removed DocumentLoader::topLevelApplicationCache(), and changed callers accordingly.

        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::selectCache):
        (WebCore::ApplicationCacheGroup::selectCacheWithoutManifestURL):
        Removed checks for the frame being top-level one, now that subframes are cached independently.



Canonical link: https://commits.webkit.org/31673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39474 268f45cc-cd09-0410-ab3c-d52691b4dbfc