WebCore/loader/MainResourceLoader.cpp
@@ -433,12 +433,7 @@ bool MainResourceLoader::load(const ResourceRequest& r, const SubstituteData& su
     if (!m_substituteData.isValid() && frameLoader()->frame()->settings() && frameLoader()->frame()->settings()->offlineWebApplicationCacheEnabled()) {
         ASSERT(!m_applicationCache);
 
-        if (Page* page = frameLoader()->frame()->page()) {
-            if (frameLoader()->frame() == page->mainFrame())
-                m_applicationCache = ApplicationCacheGroup::cacheForMainRequest(r, m_documentLoader.get());
-            else
-                m_applicationCache = frameLoader()->documentLoader()->topLevelApplicationCache();
-        }
+        m_applicationCache = ApplicationCacheGroup::cacheForMainRequest(r, m_documentLoader.get());
             
         if (m_applicationCache) {
             // Get the resource from the application cache.
